--- a/src/Components/Payment.css
+++ b/src/Components/Payment.css
@@ -6,7 +6,7 @@
   margin: 2px 0 0 0;
   border: solid 1px #555;
   border-radius: 2px;
-  width: 83vw;
+  width: 100%;
 }
 
 .payment > span {
